add  all api for swagger
