# handler/task.go
@@ -27,6 +27,17 @@ func NewTaskHandler() ITaskHandler {
 	}
 }
 
+// CreateTask godoc
+// @Summary      Create task
+// @Description  Create task which user_id = ?
+// @Tags         task
+// @Accept       json
+// @Produce      json
+// @Param 		 data body entity.Task true "task create data"
+// @Success      200  {object}   wapper.Response
+// @Failure	   400 {object} wapper.Response
+// @Failure		500 {object} wapper.Response
+// @Router       /task/create [post]
 func (t *taskHandler) CreateTask(c *gin.Context) {
 	var req entity.Task
 	err := c.BindJSON(&req)
@@ -43,6 +54,17 @@ func (t *taskHandler) CreateTask(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, wapper.SuccessWithData(res))
 }
 
+// UpdateTask godoc
+// @Summary      Update task
+// @Description  Update task data
+// @Tags         task
+// @Accept       json
+// @Produce      json
+// @Param 		 data body entity.Task true "task update data"
+// @Success      200  {object}   wapper.Response
+// @Failure	   400 {object} wapper.Response
+// @Failure		500 {object} wapper.Response
+// @Router       /task/update [put]
 func (t *taskHandler) UpdateTask(c *gin.Context) {
 	var req entity.Task
 	err := c.BindJSON(&req)
@@ -82,6 +104,15 @@ func (t *taskHandler) GetTaskByUserID(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, wapper.SuccessWithData(res))
 }
 
+// GetExpiredTask godoc
+// @Summary      Get tasks expired
+// @Description  Get all tasks end_time > now()
+// @Tags         task
+// @Param 		 user_id path int true "User ID"
+// @Success      200  {object}   wapper.Response
+// @Failure	   400 {object} wapper.Response
+// @Failure		500 {object} wapper.Response
+// @Router       /task/expired/{user_id} [get]
 func (t *taskHandler) GetExpiredTask(c *gin.Context) {
 	req := c.Param("user_id")
 	data, err := strconv.Atoi(req)
